test/valid/nested_if.csmall
int main() {
	int mijnGroteInteger = 3;
	int ikhouvancompilers = 3;
	int a = 2;
	float b = 3;
	char mijnchar = 'b';
	if (mijnGroteInteger == 3) {
		if (ikhouvancompilers > 1) {
			if (a == 2) {
				return 1;
			} else if (mijnchar == 'b') {
				return mijnGroteInteger;
			} else {
				return ikhouvancompilers;
			}
		}
	} else {
		return -1;
	}
	return 0;
}