test/errors/invalidcast.csmall
int main() {
	int a = 5;
	float b = (void)a;
	return 0;
}